--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         </activity>
         <activity android:name=".ActivityLogup" />
         <activity android:name=".AboutUs"></activity>
-        <activity android:name=".Game" android:screenOrientation="landscape"></activity>
+        <activity android:name=".GameActivity" android:screenOrientation="landscape"></activity>
     </application>
 
 </manifest>
