--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Nov 14 18:49:54 CST 2019
-sdk.dir=C\:\\Users\\diego\\AppData\\Local\\Android\\Sdk
+#Tue Nov 26 07:46:37 CST 2019
+sdk.dir=C\:\\Users\\javochoa\\AppData\\Local\\Android\\Sdk
