--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,14 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation "com.github.parse-community.Parse-SDK-Android:parse:1.22.1"
+    implementation 'com.google.firebase:firebase-core:17.2.1'
+    implementation 'com.google.firebase:firebase-messaging:20.0.1'
+    implementation "com.github.parse-community.Parse-SDK-Android:fcm:1.22.1"
+    implementation 'com.parse.bolts:bolts-android:1.4.0'
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+
 }
